# fitsio-pure

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  FITS_RESOURCES.md  IMPLEMENTATION.md  README.md  VALIDATION_REPORT.md  potential-adopters.md
.github/workflows/: ci.yml
adopters/: FITSWebQL.md  FastFitsCutter.md  MARVELpipeline.md  README.md  RapidFits.md  Star_Tracker_Microcontroller.md  boom-catalogs.md  cameraunit.md  catetool.md  ccdi.md  citrus.md  dog.md  electra_stacking.md  eventide.md  f2i.md  fitsrotate_rs.md  map2fig.md  marlu.md  mwa_hyperdrive.md  mwalib.md  opal.md  qrusthy.md  refimage.md  rusty-photon.md  serialimage.md  twinkle.md  xisf.md
crates/fits-benchmark/: Cargo.toml  README.md
crates/fits-benchmark/src/: column_bench.rs  main.rs
crates/fitsio-compat/: Cargo.toml
crates/fitsio-compat/src/: errors.rs  fitsfile.rs  hdu.rs  headers.rs  images.rs  lib.rs  tables.rs
crates/fitsio-pure/: Cargo.toml
crates/fitsio-pure/src/: bintable.rs  block.rs  checksum.rs  endian.rs  error.rs  extension.rs  hdu.rs  header.rs  image.rs  io.rs  lib.rs  primary.rs  table.rs  tiled.rs  value.rs
crates/fitsio-pure/src/compat/: errors.rs  fitsfile.rs  hdu.rs  headers.rs  images.rs  mod.rs  ndarray_compat.rs  tables.rs
crates/fitsio-pure/tests/: fitsrs_samples.rs  roundtrip.rs  test_cases_corpus.rs
crates/fitsio-tools/: Cargo.toml
docs/: benchmarks.md  comparison.md  compat-guide.md
docs/issues/: tiled_image_compression.md
scripts/: fetch_samples.sh  validate_metadata.py
test_data/: IUElwp25637mxlo.fits  NICMOSn4hk12010_mos.fits  WFPC2u5780205r_c0fx.fits  comp.fits  test0.fits
