[package]
name = "fitsio-pure"
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"
description = "Pure Rust FITS file reader and writer"
readme = "../../README.md"
repository = "https://github.com/OrbitalCommons/fitsio-pure"

[features]
default = ["std"]
std = []
compat = ["std"]
cli = ["std"]
array = ["dep:ndarray", "compat"]

[dev-dependencies]
tempfile = "3.25"

[[bin]]
name = "fitsinfo"
path = "src/bin/fitsinfo.rs"
required-features = ["cli"]

[[bin]]
name = "fitsconv"
path = "src/bin/fitsconv.rs"
required-features = ["cli"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["extern_crate_alloc"] }
ndarray = { version = "0.17.2", optional = true }
