[package]
name = "fitsio-tools"
version = "0.9.0"
edition = "2021"
description = "CLI tools for working with FITS files using fitsio-pure"
license = "MIT"
repository = "https://github.com/OrbitalCommons/fitsio-pure"

[dependencies]
fitsio-pure = { path = "../fitsio-pure", version = "0.9.0" }

[[bin]]
name = "fitsinfo"
path = "src/bin/fitsinfo.rs"

[[bin]]
name = "fitsconv"
path = "src/bin/fitsconv.rs"
